--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+h1,h2,h3,h4,h5{
+  font-family: 'Abril Fatface',serif;
+}
+p,b{
+  font-family: 'Kaushan Script',cursive;
+  font-size: larger;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#d{
+  color: #FFC300;
 }
